Bug 1814278 - Align the spacing and layout of the new Migration Wizard more closely to the spec. r=kpatenio,fluent-reviewers,flod,settings-reviewers
Along with bringing us closer to the layout and spacing from Figma, this does the following:

1. Changes the header element to an <h1> and uses CSS to get the expected font size. This should
   make the organization of the wizard make more sense to screenreaders.
2. Handles the "single resource" case for Variant 2, where we hide "Select All" and align the
   resource list to the left if there's only a single resource to import.
3. Fixes a string to match the spec.

Differential Revision: https://phabricator.services.mozilla.com/D173054

UltraBlame original commit: 1ef8b43656c1fa9eb8fd2f1bd2b6b3a61012705f

--- a/browser/themes/shared/migration/migration-wizard.css
+++ b/browser/themes/shared/migration/migration-wizard.css
@@ -93,13 +93,21 @@ column
 ;
 width
 :
-25
+22
 .
-54em
+34em
 ;
 }
-h3
+h1
 {
+font
+-
+size
+:
+1
+.
+30em
+;
 font
 -
 weight
@@ -109,16 +117,52 @@ normal
 margin
 -
 block
--
-start
 :
 0
+16px
 ;
 min
 -
 height
 :
 1em
+;
+}
+ol
+{
+padding
+-
+inline
+-
+start
+:
+24px
+;
+margin
+-
+block
+:
+16px
+0
+;
+}
+li
+:
+not
+(
+:
+last
+-
+child
+)
+{
+margin
+-
+block
+-
+end
+:
+16px
 ;
 }
 div
@@ -330,6 +374,10 @@ border
 padding
 :
 8px
+;
+margin
+:
+0
 ;
 font
 -
@@ -545,6 +593,32 @@ page
 selection
 "
 ]
+[
+show
+-
+import
+-
+all
+]
+[
+single
+-
+item
+]
+#
+select
+-
+all
+div
+[
+name
+=
+"
+page
+-
+selection
+"
+]
 :
 not
 (
@@ -580,6 +654,15 @@ import
 -
 all
 ]
+:
+not
+(
+[
+single
+-
+item
+]
+)
 label
 :
 not
@@ -653,6 +736,22 @@ preamble
 display
 :
 none
+;
+}
+.
+resource
+-
+selection
+-
+preamble
+{
+margin
+-
+block
+-
+start
+:
+16px
 ;
 }
 details
@@ -759,6 +858,14 @@ self
 :
 end
 ;
+margin
+-
+inline
+-
+end
+:
+8px
+;
 }
 details
 :
@@ -775,6 +882,36 @@ margin
 block
 -
 end
+:
+16px
+;
+}
+#
+resource
+-
+type
+-
+list
+{
+padding
+:
+0
+;
+}
+#
+resource
+-
+type
+-
+list
+>
+label
+{
+margin
+-
+block
+-
+start
 :
 16px
 ;
@@ -813,7 +950,7 @@ grid
 ;
 gap
 :
-8px
+16px
 ;
 }
 .
@@ -1109,6 +1246,39 @@ items
 center
 ;
 }
+div
+[
+name
+=
+"
+page
+-
+selection
+"
+]
+[
+show
+-
+import
+-
+all
+]
+.
+resource
+-
+selection
+-
+details
+{
+padding
+-
+inline
+-
+start
+:
+8px
+;
+}
 .
 resource
 -
@@ -1142,6 +1312,13 @@ b
 c
 b
 "
+;
+margin
+-
+block
+:
+16px
+0
 ;
 }
 media
